Mejora en la condicion de paro, ahora puede detenerse antes de lo estipulado si llega a la convergencia solicitada